Feat: 946 Support Code Based Login
