# packages/enterprise/openapi.yaml
@@ -2768,10 +2768,8 @@ paths:
               properties:
                 email:
                   type: string
-                  nullable: false
                 organizationId:
                   type: string
-                  nullable: false
                 userId:
                   type: string
                   nullable: true
@@ -2786,6 +2784,43 @@ paths:
               schema:
                 $ref: '#/components/schemas/Response'
 
+  /enterprise/api/v3/users/auth/short-code:
+    post:
+      summary: User authentication
+      description: Sends a magic-link to authenticate by short-code the user
+      tags:
+        - Account management
+      requestBody:
+        content:
+          application/json:
+            schema:
+              properties:
+                email:
+                  type: string
+                  nullable: false
+                organizationId:
+                  type: string
+                  nullable: false
+                userId:
+                  type: string
+                  nullable: true
+                shortCode:
+                  type: string
+                  nullable: false
+              required:
+                - email
+                - organizationId
+      responses:
+        '200':
+          description: Successful
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  magicLink:
+                    type: string
+                    nullable: false
   /enterprise/api/v3/users/auth/confirmation:
     post:
       summary: Account registration confirmation
