# packages/enterprise/src/types/verify-short-code-request.ts
@@ -1,0 +1,6 @@
+export type VerifyShortCodeRequest = {
+  email: string
+  organizationId: string
+  userId: string //TODO: to be removed once mobile stops storing `userId`
+  shortCode: string
+}
